<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
	
    <EditText 
            android:id="@+id/insured"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/insured"
   			android:inputType="text" />
    
    <EditText
        	android:id="@+id/address"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/address"
   			android:inputType="text" />
           
    <EditText 
            android:id="@+id/fileNumber"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/fileNumber"
   			android:inputType="text" />
    
    <EditText 
            android:id="@+id/date"
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/date"
   			android:inputType="text" />
	
    <TableLayout
    	android:id="@+id/middleSection"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >	
    	<TableRow
         android:id="@+id/sourceRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    	    
    	    
        <TextView
        android:id="@+id/sourceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/source" />
        
        <RadioGroup android:id="@+id/RGsource"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/source1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Foundation "
         />
    <RadioButton android:id="@+id/source2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Sewer "
         />   
          <RadioButton android:id="@+id/source3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Fire "
         />
                    <RadioButton android:id="@+id/source4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Other "
         />
</RadioGroup>
        


        <EditText
            android:id="@+id/otherText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/please_specify"
            android:inputType="text"
            android:minLines="2" >

            <requestFocus />
        </EditText>

     </TableRow>
    
        <TableRow
         android:id="@+id/waterCatRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
        android:id="@+id/waterCatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/water_category" />
        
              <RadioGroup android:id="@+id/RGwaterCat"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/waterCat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 1 Clean "
         />
    <RadioButton android:id="@+id/waterCat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 2 Gray "
         />   
          <RadioButton android:id="@+id/waterCat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 3 Black "
         />

</RadioGroup>
        

        
             </TableRow>
        <TableRow>
        
        <TextView
        android:id="@+id/classWatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/class_of_water" />
        
               <RadioGroup android:id="@+id/RGclassWat"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/classWat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 1 "
         />
    <RadioButton android:id="@+id/classWat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 2 "
         />   
          <RadioButton android:id="@+id/classWat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 3 "
         />
        <RadioButton android:id="@+id/classWat4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" 4 "
         />
</RadioGroup>
        
       
     </TableRow>
         <TableRow>
         
    <TextView
        android:id="@+id/contentsManipulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/contents_manipulation" />
                          
    <RadioGroup android:id="@+id/RGcontents"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton android:id="@+id/contents1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Small "
         />
    <RadioButton android:id="@+id/contents2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Medium "
         />   
          <RadioButton android:id="@+id/contents3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		 android:text=" Large "
         />

</RadioGroup>
        
    
    
     </TableRow>
     </TableLayout>
    <TableLayout
    	android:id="@+id/middleSection2"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >	
     <TableRow android:layout_gravity="left" >

        <CheckBox 
            android:id="@+id/lockBoxInstalled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_box_installed"/>
        <CheckBox 
            android:id="@+id/readingsTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readings_taken"/>
        <CheckBox 
            android:id="@+id/photosTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos_taken"/>
                 <CheckBox 
            android:id="@+id/afterHoursEmergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_hours_emergency"/>
     </TableRow>
     </TableLayout>
     	
    <TableLayout
    	android:id="@+id/middleSection"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    >	
 
     
     <TableRow>
         
                    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/crew" />          
    
                    <EditText
            android:id="@+id/crewText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:minLines="2" >

            <requestFocus />
        </EditText>
        
                                <TextView
        android:id="@+id/xText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="X" />     
                    
                <EditText
            android:id="@+id/hoursText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:minLines="2" >

            <requestFocus />
        </EditText>
            
                <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/hours" />       
     </TableRow>
     
     
          <TableRow>
                 	    
    <Button
        android:id = "@+id/button_addRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_room" />
    <Button
        android:id = "@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    
     </TableRow>
</TableLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </ListView>

</LinearLayout>
